@@ -65,7 +65,7 @@ MainWindow::MainWindow(QWidget * parent, Qt::WindowFlags f)
 	editsyntax = new EditSyntaxHighlighter(editor->document());
 	
 	QDialog *aboutdialog = new QDialog();
-  	QLabel *aboutlabel = new QLabel(QObject::tr("<h2 align='center'>BASIC-256 -- Version 0.9.1</h2> \
+  	QLabel *aboutlabel = new QLabel(QObject::tr("<h2 align='center'>BASIC-256 -- Version 0.9.2</h2> \
 					<p>Copyright &copy; 2006, The BASIC-256 Team</p>	\
                                         <p>Please visit our web site at http://kidbasic.sourceforge.net for tutorials and documentation.</p> \
 					<p>Please see the CONTRIBUTORS file for a list of developers and translators for this project.</p>\
